Fix: newsletter trome position y boton safari

--- a/src/general-styles/components/features/header/_header-full.scss
+++ b/src/general-styles/components/features/header/_header-full.scss
@@ -97,10 +97,10 @@ $max-width: 1366px;
     max-width: 320px;
     display: none;
     &.active {
-      position: fixed;
+      position: absolute;
       bottom: 0;
       left: 0;
-      top: 45px;
+      // top: 45px;
       right: 0;
       margin: auto;
       z-index: 3;
